--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "projetakipnodeserver",
+  "name": "ptsnode",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "mongoose": "^5.4.19",
     "morgan": "~1.9.0"
   }
 }
